--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.0",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
@@ -70,5 +72,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
