--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
+    "undici": "^5.27.2",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1"
   },
