--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
@@ -29,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
@@ -41,12 +44,19 @@
     "lint-staged": "^15.0.2",
     "msw": "^2.0.4",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "twin.macro": "^3.4.0",
     "typescript": "^5.0.2",
     "undici": "^5.27.2",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   },
   "msw": {
     "workerDirectory": "public"
