🐛 import.meta 에러 수정
- tsconfig에서 vite/client 타입 추가
- https://github.com/vitejs/vite/issues/9539

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,7 @@
       "@utils/*": ["utils/*"],
       "@types/*": ["@types/*"]
     },
-    "types": ["@testing-library/jest-dom"]
+    "types": ["node", "vite/client", "@testing-library/jest-dom"]
   },
-  "include": ["src"]
+  "include": ["src/**/*.tsx", "src/**/*.tsx", "src/@types"]
 }
