--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,5 +36,5 @@
     },
     "types": ["node", "vite/client", "@testing-library/jest-dom"]
   },
-  "include": ["src/**/*.tsx", "src/**/*.tsx", "src/@types"]
+  "include": ["src/**/*.tsx", "src/**/*.ts", "src/@types"]
 }
