--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.22.15",
-    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
