🐛 tsconfig type alias @types 폹더 적용안되는거 수정
- @를 제거하여 해결

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,9 +32,9 @@
       "@config/*": ["config/*"],
       "@hooks/*": ["hooks/*"],
       "@utils/*": ["utils/*"],
-      "@types/*": ["@types/*"]
+      "types/*": ["types/*"]
     },
     "types": ["node", "vite/client", "@testing-library/jest-dom"]
   },
-  "include": ["src/**/*.tsx", "src/**/*.ts", "src/@types"]
+  "include": ["src/**/*.tsx", "src/**/*.ts", "src/types/**/*.ts"]
 }
