--- a/backend/package.json
+++ b/backend/package.json
@@ -35,11 +35,15 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.15",
+    "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -48,6 +52,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "lint-staged": "^15.0.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "prettier": "^3.0.0",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
