🔧 noUnusedParameters를 false로 변경
- 해당 옵션의 경우 사용하지 않는 파라미터가 있으면 에러를 발생시키는데 개발 단계에서는 불필요하다고 생각해서 false로 변경

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,7 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "src",
     "paths": {
