--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "typescript": "^5.0.2",
     "undici": "^5.27.2",
     "vite": "^4.4.5",
+    "vite-plugin-environment": "^1.1.3",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "babelMacros": {
