🔧 브랜치명 master에서 main으로 변경

--- a/.github/workflows/CD-Front.yml
+++ b/.github/workflows/CD-Front.yml
@@ -2,7 +2,7 @@ name: Frontend CD with Docker Hub
 
 on:
   push:
-    branches: [master] # master에 push되었을 때 해당 yml을 실행한다.
+    branches: [main] # main push되었을 때 해당 yml을 실행한다.
 
 jobs:
   build:
