:wrench: Hotfix 테스트

--- a/.github/workflows/CD-Back.yml
+++ b/.github/workflows/CD-Back.yml
@@ -2,7 +2,7 @@ name: CI/CD using github action & docker
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "HotFix/**"]
 
 permissions:
   contents: read
