--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 # jest에서 import.env를 사용할 수 없어서 작성
 # 실 배포에서는 DEV=false 변경할 것
 DEV=true
+
+VITE_NAVER_CLIENT_ID=okvrGkyhuEBstNzqo_dq
+VITE_NAVER_REDIRECT_URI=http://www.lockfestival.com/auth
