--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
 
     location /api {
-      proxy_pass http://localhost:3000/api;
+      proxy_pass http://www.lockfestival.com:3000/api;
     } 
 
 }
