--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,8 +9,8 @@ server {
     }
 
 
-    location /api {
-      proxy_pass http://127.0.0.1:3000/api;
+    location /api/v1 {
+      proxy_pass http://127.0.0.1:3000/api/v1;
     } 
 
 }
