--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,8 @@ server {
 
 
     location /api/v1 {
-      proxy_pass http://127.0.0.1:3000/api/v1;
+
+      proxy_pass http://127.0.0.1:3000;
     } 
 
 }
