--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,11 @@ server {
     location /api/v1 {
 
       proxy_pass http://127.0.0.1:3000;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
     } 
 
 }
