--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend {
+  server 127.0.0.1:3000;
+}
+
 server {
     listen 80;
     access_log /var/log/nginx/access.log;
@@ -9,14 +13,17 @@ server {
     }
 
 
-    location /api/v1 {
+    location /api {
 
-      proxy_pass http://127.0.0.1:3000;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Connection "";
+      proxy_http_version 1.1;
+
+      proxy_pass http://backend/api;
+      
     } 
 
 }
