--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,3 @@
-upstream backend {
-  server 127.0.0.1:3000;
-}
-
 server {
     listen 80;
     access_log /var/log/nginx/access.log;
@@ -15,14 +11,7 @@ server {
 
     location /api {
 
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Connection "";
-      proxy_http_version 1.1;
-
-      proxy_pass http://backend/api;
+      proxy_pass http://www.lockfestival.com:3000/api;
       
     } 
 
