--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,8 +11,12 @@ server {
 
     location /api {
 
+      proxy_buffer_size          128k;
+      proxy_buffers              4 256k;
+      proxy_busy_buffers_size    256k;
+
       proxy_pass http://www.lockfestival.com:3000/api;
-      
+
     } 
 
 }
