📦 socket.io-client 설치

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
