--- a/.github/workflows/CD-Front.yml
+++ b/.github/workflows/CD-Front.yml
@@ -2,9 +2,10 @@ name: Frontend CD with Docker Hub
 
 on:
   push:
-    branches: 
+    branches:
       - main # main push되었을 때 해당 yml을 실행한다.
-      - 'HotFix/**' #HotFix 시에 무조건 실행하도록 설정한다.
+      - dev
+      - "HotFix/**" #HotFix 시에 무조건 실행하도록 설정한다.
 
 jobs:
   build:
@@ -15,7 +16,7 @@ jobs:
       - name: make env3
         run: |
           cd ./frontend
-          
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
