--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "undici": "^5.27.2",
     "vite": "^4.4.5",
     "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "babelMacros": {
