--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,7 @@
       "@utils/*": ["utils/*"],
       "types/*": ["types/*"]
     },
-    "types": ["node", "vite/client", "@testing-library/jest-dom"]
+    "types": ["node", "vite/client", "@testing-library/jest-dom", "vite-plugin-svgr/client"]
   },
   "include": ["src/**/*.tsx", "src/**/*.ts", "src/types/**/*.ts"]
 }
