--- a/.github/workflows/CD-Back.yml
+++ b/.github/workflows/CD-Back.yml
@@ -37,7 +37,7 @@ jobs:
             -e "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" \
             -e "DATABASE_USER=${{ secrets.DATABASE_USER }}" \
             -e "MONGODB_URL=${{secrets.MONGODB_URL}}" \
-            -e "MONGODB_DBNAME=${{secrets.MONGODB_DB_NAME}}" \
+            -e "MONGODB_DBNAME=${{secrets.MONGODB_DBNAME}}" \
             -e "JWT_ACCESS_TOKEN_SECRET=${{ secrets.JWT_ACCESS_TOKEN_SECRET }}" \
             -e "JWT_ACCESS_TOKEN_TIME=${{ secrets.JWT_ACCESS_TOKEN_TIME }}" \
             -e "NAVER_CLIENT_ID=${{ secrets.NAVER_CLIENT_ID }}" \
