--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,11 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.2.10",
+    "@socket.io/redis-adapter": "^8.2.1",
     "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -39,8 +42,10 @@
     "nest-winston": "^1.9.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
