:construction:  채팅 개발 시 바로 배포되도록 변경

--- a/.github/workflows/CD-Back.yml
+++ b/.github/workflows/CD-Back.yml
@@ -2,7 +2,7 @@ name: CI/CD using github action & docker
 
 on:
   push:
-    branches: ["main", "dev", "HotFix/**"]
+    branches: ["main", "dev", "HotFix/**", "Chat/**"]
 
 permissions:
   contents: read
