:green_heart: 소켓 통신을 위한 경로 변경
/socket.io -> backend

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,13 +9,21 @@ server {
     }
 
 
+    location /socket.io {
+      proxy_buffer_size          128k;
+      proxy_buffers              4 256k;
+      proxy_busy_buffers_size    256k;
+
+      proxy_pass http://backend_default:3000/socket.io;
+    }
+
     location /api {
 
       proxy_buffer_size          128k;
       proxy_buffers              4 256k;
       proxy_busy_buffers_size    256k;
 
-      proxy_pass http://www.lockfestival.com:3000/api;
+      proxy_pass http://backend_default:3000/api;
 
     } 
 
