--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,7 +14,7 @@ server {
       proxy_buffers              4 256k;
       proxy_busy_buffers_size    256k;
 
-      proxy_pass http://backend_default:3000/socket.io;
+      proxy_pass http://www.lockfestival.com:3000/socket.io;
     }
 
     location /api {
@@ -23,7 +23,7 @@ server {
       proxy_buffers              4 256k;
       proxy_busy_buffers_size    256k;
 
-      proxy_pass http://backend_default:3000/api;
+      proxy_pass http://www.lockfestival.com:3000/api;
 
     } 
 
