--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,12 +9,14 @@ server {
     }
 
 
-    location /socket.io {
-      proxy_buffer_size          128k;
-      proxy_buffers              4 256k;
-      proxy_busy_buffers_size    256k;
-
+    location ^~ /socket.io {
       proxy_pass http://www.lockfestival.com:3000/socket.io;
+
+
+      proxy_http_version      1.1;
+      proxy_set_header       Upgrade $http_upgrade;
+      proxy_set_header       Connection "upgrade";
+      proxy_set_header Host $host;
     }
 
     location /api {
