--- a/nginx.conf
+++ b/nginx.conf
@@ -3,24 +3,23 @@ server {
        listen 80;
        client_max_body_size 20M;
 
-       server_name lockfestival.com;
+       server_name www.lockfestival.com;
 
-       return 301 https://lockfestival.com$request_uri;
+       return 301 https://www.lockfestival.com$request_uri;
 }
 
 server {
 
        listen 443 ssl;
        client_max_body_size 20M;
-       server_name lockfestival.com;
+       server_name www.lockfestival.com
        # Certificate
        ssl_certificate /etc/ssl/cert.pem;
        # Private Key
        ssl_certificate_key /etc/ssl/key.pem;
 
-      location ^~ /socket.io {
+       location ^~ /socket.io {
         proxy_pass http://backend:3000/socket.io;
-
 
         proxy_http_version      1.1;
         proxy_set_header       Upgrade $http_upgrade;
