--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,6 @@ services:
       - 443:443
 
     volumes:
-    - ./conf/nginx.conf:/etc/nginx/conf.d/nginx.conf
-    - /etc/letsencrypt/live/lockfestival.com/fullchain.pem:/etc/ssl/cert.pem
-    - /etc/letsencrypt/live/lockfestival.com/privkey.pem:/etc/ssl/key.pem
+    - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf
+    - /etc/letsencrypt/live/www.lockfestival.com/fullchain.pem:/etc/ssl/cert.pem
+    - /etc/letsencrypt/live/www.lockfestival.com/privkey.pem:/etc/ssl/key.pem
