--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,6 +16,9 @@ FROM nginx
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+RUN rm /etc/nginx/conf.d/default.conf
+RUN mv /etc/nginx/conf.d/nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
