🔧 nginx에 세미콜론 붙임

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
 
        listen 443 ssl;
        client_max_body_size 20M;
-       server_name www.lockfestival.com
+       server_name www.lockfestival.com;
        # Certificate
        ssl_certificate /etc/ssl/cert.pem;
        # Private Key
