--- a/.github/workflows/CD-All.yml
+++ b/.github/workflows/CD-All.yml
@@ -19,6 +19,8 @@ jobs:
           docker build -f Dockerfile -t ${{ secrets.DOCKER_BACK_REPO }}/${{secrets.DOCKER_BACK_TAG}} .
           docker push ${{ secrets.DOCKER_BACK_REPO }}/${{secrets.DOCKER_BACK_TAG}}
 
+          cd ..
+
           echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" > .env
           echo "DATABASE_DATABASE=${{ secrets.DATABASE_DATABASE }}" >> .env
           echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> .env
@@ -34,7 +36,6 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
           echo "PORT=${{ secrets.BACK_PORT }}" >> .env
           echo "FRONTEND_BASE_URL=${{ secrets.FRONTEND_BASE_URL }}" >> .env
-          cd ..
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -58,8 +59,9 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "./backend/.env"
+          source: "./.env"
           target: "~"
+          overwrite: true
 
       - name: Copy .env to Remote Server
         uses: appleboy/scp-action@master
@@ -84,7 +86,7 @@ jobs:
       - name: Remove local docker-compose copied file
         run: |
           rm ./docker-compose.yaml
-          rm ./backend/.env
+          rm ./.env
           rm ./nginx.conf
 
       - name: Depoly to Server
@@ -122,4 +124,4 @@ jobs:
 
             docker-compose down
             docker-compose up -d
-            rm -rf ~/backend/.env
+            rm -rf ~/.env
