:zap: 사용하지 않는 도커 이미지를 제거하는 로직 추가

--- a/.github/workflows/CD-All.yml
+++ b/.github/workflows/CD-All.yml
@@ -125,3 +125,4 @@ jobs:
             docker-compose down
             docker-compose up -d
             rm -rf ~/backend/.env
+            docker image prune -a
