--- a/.github/workflows/CD-All.yml
+++ b/.github/workflows/CD-All.yml
@@ -19,6 +19,7 @@ jobs:
           docker build -f Dockerfile -t ${{ secrets.DOCKER_BACK_REPO }}/${{secrets.DOCKER_BACK_TAG}} .
           docker push ${{ secrets.DOCKER_BACK_REPO }}/${{secrets.DOCKER_BACK_TAG}}
 
+          cd ..
 
           echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" > .env
           echo "DATABASE_DATABASE=${{ secrets.DATABASE_DATABASE }}" >> .env
@@ -35,7 +36,6 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
           echo "PORT=${{ secrets.BACK_PORT }}" >> .env
           echo "FRONTEND_BASE_URL=${{ secrets.FRONTEND_BASE_URL }}" >> .env
-          cd ..
 
       - name: Login to DockerHub for Frontend
         uses: docker/login-action@v1
@@ -59,7 +59,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "./backend/.env"
+          source: "./.env"
           target: "~"
           overwrite: true
 
@@ -86,7 +86,7 @@ jobs:
       - name: Remove copied file
         run: |
           rm ./docker-compose.yaml
-          rm ./backend/.env
+          rm ./.env
           rm ./nginx.conf
 
       - name: Depoly to Server
@@ -124,5 +124,5 @@ jobs:
 
             docker-compose down
             docker-compose up -d
-            rm -rf ~/backend/.env
+            rm -rf ~/.env
             docker image prune -a
