:wrench: import/export 문법으로 설정

--- a/crawler/package.json
+++ b/crawler/package.json
@@ -2,6 +2,7 @@
   "name": "crawler",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www"
   },
