--- a/crawler/package.json
+++ b/crawler/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
