--- a/backend/package.json
+++ b/backend/package.json
@@ -35,8 +35,10 @@
     "@nestjs/websockets": "^10.2.10",
     "@socket.io/redis-adapter": "^8.2.1",
     "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "https": "^1.0.0",
     "mongoose": "^8.0.1",
     "mysql2": "^3.6.3",
     "nest-winston": "^1.9.4",
