--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-helmet-async": "^2.0.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
