--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-query-devtools": "^5.8.3",
+    "@tanstack/react-virtual": "^3.0.1",
     "@types/react-slick": "^0.23.12",
     "axios": "^1.6.1",
     "react": "^18.2.0",
