--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2"
