--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,9 @@ server {
         proxy_set_header       Connection "upgrade";
         proxy_set_header Host $host;
       }
+        location /image {
+        proxy_pass https://kr.object.private.ncloudstorage.com/test23/;
+      }
 
        location /api {
 
