:sparkles: 시 단위를 밀리초로 표현하는 상수 추가

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -22,6 +22,7 @@
       "@config/*": ["./src/config/*"],
       "@utils/*": ["./src/utils/*"],
       "@enum/*": ["./src/enum/*"],
+      "@constants/*": ["./src/constants/*"],
       "@modules/*": ["./src/modules/*"],
       "@auth/*": ["./src/modules/authModules/auth/*"],
       "@user/*": ["./src/modules/userModules/user/*"],
