--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,9 @@ server {
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
        }
+       location /image {
+          proxy_pass https://kr.object.private.ncloudstorage.com/lockfestival/image
+       }
 
        location / {
               root   /usr/share/nginx/html;
