🐛 세미콜론 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ server {
           proxy_set_header X-Forwarded-Proto $scheme;
        }
        location /image {
-          proxy_pass https://kr.object.private.ncloudstorage.com/lockfestival/image
+          proxy_pass https://kr.object.private.ncloudstorage.com/lockfestival/image;
        }
 
        location / {
