--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,9 @@ services:
       - NODE_ENV=${NODE_ENV}
       - PORT=${PORT}
       - FRONTEND_BASE_URL=${FRONTEND_BASE_URL}
+      - X_NCP_APIGW_API_KEY=${X_NCP_APIGW_API_KEY}
+      - X_NCP_CLOVASTUDIO_API_KEY=${X_NCP_CLOVASTUDIO_API_KEY}
+      - X_NCP_CLOVASTUDIO_REQUEST_ID=${X_NCP_CLOVASTUDIO_REQUEST_ID}
     expose:
       - 3000
   redis:
